feat: start adding entities and dtos

--- a/.env
+++ b/.env
@@ -2,5 +2,6 @@ PORT=3000
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_NAME=kupipodariday
+DATABASE_SCHEMA=kupipodariday
 DATABASE_USERNAME=student
 DATABASE_PASSWORD=student
