--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ DATABASE_NAME=kupipodariday
 DATABASE_SCHEMA=kupipodariday
 DATABASE_USERNAME=student
 DATABASE_PASSWORD=student
+SECRET=this_should_not_be_here
